# Muser

./: .gitignore  README.md  USER-PRESENCE-FEATURE.md  electron.vite.config.ts  test-p2p.js  test-yjs-sync.html  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/: preload.ts
embedding-viz/: DECISIONS.md  README.md
embedding-viz/data/: embeddings_image.json
embedding-viz/frontend/: index.html  main.js  package-lock.json  package.json  style.css  topography.js  utils.js  vite.config.js
embedding-viz/frontend/public/data/: embeddings.json
embedding-viz/media/: Screen Recording 2025-12-20 at 02.49.05.mov
embedding-viz/pipeline/: cluster.py  embed.py  main.py  phylogeny.py  pyproject.toml
old/: .gitignore  IMPLEMENTATION.md  PROJECT_STRUCTURE.md  SETUP.md  TECH_DECISIONS.md  WEBRTC-FIX.md  index.html  package-lock.json  package.json  pyproject.toml  setup-python.sh  signaling-server.js
old/electron/: main.ts
old/image_bucketing/: bucket.py  bucketer.py
old/src/: App.tsx
old/src/components/: ConnectionStatus.tsx  DotGrid.tsx  RoomManager.tsx  TldrawCanvas.tsx  UsersList.tsx
old/src/yjs/: useYjsPresence.ts
src/: App.tsx
src/components/: ConnectionStatus.tsx  TldrawCanvas.tsx  UsersList.tsx
src/yjs/: YjsProvider.tsx  transports.ts
